fix: resolve layout issue by removing aspect-ratio in AppComponent

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,11 +2,7 @@ section {
   display: flex;
   align-items: center;
   flex-direction: column;
-  // justify-content: flex-start;
-    aspect-ratio: 16/9;
-
 }
-
 
 #app-menu-overlay {
   position: absolute;
@@ -17,7 +13,5 @@ section {
 }
 
 #router-outlet {
-  // height: 100vh;
-  // height: 100dvh;
-  width: 100%;    
+  width: 100%;
 }
