--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -20,7 +20,7 @@
   background-color: $bc;
   color: $c;
   height: 100vh;
-  height: 100dvh;
+  height: calc(100dvh);
   padding: calc(48px + 3rem) 6rem 0 6rem;
   overflow: hidden;
 }
